--- a/shufl-web/src/index.html
+++ b/shufl-web/src/index.html
@@ -5,12 +5,21 @@
     <meta charset="utf-8">
     <title>Shufl</title>
     <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="assets/icons/icon-180x180.png">
+    <link rel="manifest" href="manifest.webmanifest">
+    <meta name="description" content="A web app for suggesting random Artists, Albums and Tracks and listening along with your friends">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="theme-color" content="#2c3035">
+    <meta name="apple-mobile-web-app-title" content="Shufl">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#2c3035">
 </head>
 
 <body>
     <app-root></app-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
